--- a/self-drivng-car-beta-clean.ipynb
+++ b/self-drivng-car-beta-clean.ipynb
@@ -818,10 +818,9 @@
     "x = fire(x, squeeze=64, expand=64)\n",
     "x = Dropout(0.5)(x)\n",
     "\n",
-    "x = Convolution2D(5, (1, 1), padding='valid')(x) #forse pochi 5\n",
+    "x = Convolution2D(5, (1, 1), padding='valid')(x)\n",
     "x = Activation('relu')(x)\n",
     "x = Flatten()(x)\n",
-    "#x = GlobalAveragePooling2D()(x)\n",
     "\n",
     "x = Dense(1)(x)\n",
     "out = Activation('linear')(x)\n",
@@ -1020,7 +1019,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If needed, here we can save the model."
+    "If needed, here we can save or load the model."
    ]
   },
   {
@@ -1057,97 +1056,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "lambda_4 (Lambda)            (None, 196, 455, 3)       0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_6 (Conv2D)            (None, 96, 226, 24)       1824      \n",
-      "_________________________________________________________________\n",
-      "activation_6 (Activation)    (None, 96, 226, 24)       0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_7 (Conv2D)            (None, 46, 111, 36)       21636     \n",
-      "_________________________________________________________________\n",
-      "activation_7 (Activation)    (None, 46, 111, 36)       0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_8 (Conv2D)            (None, 21, 54, 48)        43248     \n",
-      "_________________________________________________________________\n",
-      "activation_8 (Activation)    (None, 21, 54, 48)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_9 (Conv2D)            (None, 11, 27, 64)        27712     \n",
-      "_________________________________________________________________\n",
-      "activation_9 (Activation)    (None, 11, 27, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_10 (Conv2D)           (None, 5, 13, 64)         36928     \n",
-      "_________________________________________________________________\n",
-      "activation_10 (Activation)   (None, 5, 13, 64)         0         \n",
-      "_________________________________________________________________\n",
-      "flatten_2 (Flatten)          (None, 4160)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_6 (Dense)              (None, 80)                332880    \n",
-      "_________________________________________________________________\n",
-      "dropout_4 (Dropout)          (None, 80)                0         \n",
-      "_________________________________________________________________\n",
-      "dense_7 (Dense)              (None, 40)                3240      \n",
-      "_________________________________________________________________\n",
-      "dropout_5 (Dropout)          (None, 40)                0         \n",
-      "_________________________________________________________________\n",
-      "dense_8 (Dense)              (None, 16)                656       \n",
-      "_________________________________________________________________\n",
-      "dropout_6 (Dropout)          (None, 16)                0         \n",
-      "_________________________________________________________________\n",
-      "dense_9 (Dense)              (None, 10)                170       \n",
-      "_________________________________________________________________\n",
-      "dense_10 (Dense)             (None, 1)                 11        \n",
-      "=================================================================\n",
-      "Total params: 468,305\n",
-      "Trainable params: 468,305\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
-    "model.load_weights(\"modelsqueeze.h5\")\n",
-    "model.compile(optimizer= adam, loss='mse')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "125.33243351221084"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.evaluate_generator(val_gen,steps=100)"
+    "model.summary()"
    ]
   }
  ],
